samples/_failures_safe/1761514222_6a5e33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7438022e.c: In function ‘main’:
./samples/SAFE/__tmp_7438022e.c:168:5: error: expected expression at end of input
  168 |     for (size_t i = 0;
      |     ^~~
./samples/SAFE/__tmp_7438022e.c:168:5: error: expected declaration or statement at end of input
